fix an issue where the login button is too close on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -115,6 +115,9 @@ button.spotify-style{
   .navigation {
     justify-content: space-around;
   }
+  .login-button-wrapper{
+    margin-top: 12px;
+  }
   .genres{
     flex-direction: column;
     align-items: flex-start;
